...
                WindowInsets.displayCutout.only(
                    WindowInsetsSides.Horizontal
                )
            ),
        topBar = {
            CenterAlignedTopAppBar(
                title = { Text("Import Settings") },
                navigationIcon = {
                    IconButton(
                        onClick = {
                            onBack()
                        }
                    ) {
...
                },
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(8.dp),
                enabled = isImportingRoutes || isImportingSettings
            ) {
                Text("Import")
            }
        }
    }
}

@Preview(
...
